--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
     
     - name: Checkout source code
-    - uses: actions/checkout@v1
+      uses: actions/checkout@v1
 
     - name: Generate deployment package
       run: zip deploy.zip *
